<resources>
    <string name="app_name">¡Bienvenido al Parcial #1!</string>
    <string name="loginHeader">Crear una Cuenta</string>
    <string name="inputUser">Ingrese su usuario</string>
    <string name="inputPass">Ingrese su contraseña</string>
    <string name="inputNewUser">Ingrese un usuario</string>
    <string name="inputNewPass">Ingrese una contraseña</string>
    <string name="registrarBtn">Crear Cuenta</string>
    <string name="loginBtn">Iniciar Sesión</string>
    <string name="alreadyHaveAccount">¿Ya tienes una cuenta? Inicia Sesión</string>
    <string name="doesntHaveAccount">¿No tienes una cuenta? Regístrate</string>
    <string name="menuName">Menú Principal</string>
    <string name="votacionesName">Conteo de Votos</string>
    <string name="votacionesTitle">Votaciones</string>
    <string name="resultadosTitle">Resultado de Votaciones</string>
    <string name="inputVotaciones">Ingrese los votos ej: 1,2,1,3</string>
    <string name="votacionesBtn">Calcular Resultados</string>
    <string name="formulaTitle">Fórmula Cuadrática</string>
    <string name="inputcuadratica1">Ingrese el valor de "a"</string>
    <string name="inputcuadratica2">Ingrese el valor de "b"</string>
    <string name="inputcuadratica3">Ingrese el valor de "c"</string>
    <string name="cuadraticaBtn">Calcular</string>
    <string name="resultadocuadraticaTitle">Resultados de la \nfórmula cuadrática</string>
    <string name="resultadossalarioTitle">Detalle de salario</string>

    <string name="menuFormula">Formula Cuadrática</string>
    <string name="menuVotaciones">Votaciones</string>
    <string name="menuSalarios">Descuentos de Salario</string>
</resources>