<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".votaciones_activity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/resultadosTitle"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/TXTTOTAL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="VOTOS TOTALES: 0"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtX1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtX1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="sans-serif-light"
        android:text='#° lugar: Candidato "x"\n Votos: # | Porcentaje ##.##%'
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="43dp"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/txtX1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_baseline_stars_24" />

    <EditText
        android:id="@+id/txtVotes"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:hint="@string/inputVotaciones"
        android:inputType="textPersonName"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_assessment_24" />

    <Button
        android:id="@+id/btnGetResults"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:width="250dp"
        android:backgroundTint="@color/accent"
        android:onClick="calculateResults"
        android:text="@string/votacionesBtn"
        android:textColor="@color/primary_text"
        android:textColorHighlight="@color/primary_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVotes" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/votacionesTitle"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetResults" />

</android.support.constraint.ConstraintLayout>